[package]
name = "testcandle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
candle-core = "0.6.0"
candle-nn = "0.6.0"
candle-transformers = "0.6.0"
hf-hub = { version = "0.3.2", features = ["online", "tokio"] }
serde_json = "1.0.120"
tokenizers = "0.19.1"
image = { version = "0.25.0", default-features = false, features = ["jpeg", "png"] }
dirs = "5.0.1"
reqwest = { version = "0.12.4", features = ["blocking"] }
